# car-dashboard

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh  qmlcomponents  qmlmodules
.cache/clangd/index/: CarControlsInfo.hpp.5BABC732600B9794.idx  CarInfo.hpp.C0A28836BCAECE2E.idx  Controller.hpp.BDD11A4DE3AE2277.idx  SignalTester.hpp.FB0319E36E3E74FA.idx
.github/workflows/: pipeline.yml
CarDashboard/: CarDashboard.qmlproject  CarDashboard.qmlproject.qtds  qmlmodules
CarDashboard/asset_imports/Quick3DAssets/: CMakeLists.txt
CarDashboard/asset_imports/Quick3DAssets/Free_porsche_911_carrera_4s/: CMakeLists.txt  Free_porsche_911_carrera_4s.qml  _importdata.json  qmldir
CarDashboard/content/: App.qml  CMakeLists.txt  MainScreeen.ui.qml
CarDashboard/imports/: CMakeLists.txt
CarDashboard/imports/CarDashboard/: CMakeLists.txt  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  qmldir
CarDashboard/src/: import_qml_plugins.h
asset_imports/Quick3DAssets/: CMakeLists.txt
asset_imports/Quick3DAssets/Drogra2/: CMakeLists.txt  Drogra2.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Drogra2/meshes/: plane87_Material__4057_0_mesh.mesh
asset_imports/Quick3DAssets/Drogra2/source scene/: drogra2.glb
asset_imports/Quick3DAssets/Drogra3/: CMakeLists.txt  Drogra3.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Drogra3/source scene/: drogra3.glb
asset_imports/Quick3DAssets/Drogra3D/: CMakeLists.txt  Drogra3D.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Drogra3D/meshes/: cube_Material_001_0_mesh.mesh  cube_Material_002_0_mesh.mesh
asset_imports/Quick3DAssets/Drogra3D/source scene/: drogra3D.glb
asset_imports/Quick3DAssets/Road_Bend/: CMakeLists.txt  Road_Bend.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Road_Bend/_icons/: Road_Mid_libicon  Road_Mid_libicon@2x
asset_imports/Quick3DAssets/Road_Bend/animations/: bone_001_rotation.qad  bone_002_position.qad  bone_002_rotation.qad  bone_003_position.qad  bone_003_rotation.qad  bone_004_position.qad  bone_004_rotation.qad
asset_imports/Quick3DAssets/Road_Bend/meshes/: CMakeLists.txt  road.mesh
asset_imports/Quick3DAssets/Road_Mid/: CMakeLists.txt  Road_Mid.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Road_Mid/animations/: bone_001_rotation_0.qad  bone_002_position_0.qad  bone_002_rotation_0.qad  bone_003_position_0.qad  bone_003_rotation_0.qad  bone_004_position_0.qad  bone_004_rotation_0.qad
asset_imports/Quick3DAssets/Road_Mid/meshes/: plane_mesh.mesh
asset_imports/Quick3DAssets/Stylized_road/: CMakeLists.txt  Stylized_road.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Stylized_road/meshes/: cube_Material_001_0_mesh.mesh  cube_Material_002_0_mesh.mesh  cube_linia_groga_0_mesh.mesh
asset_imports/Quick3DAssets/Stylized_road/source scene/: stylized_road.glb
asset_imports/Quick3DAssets/Supra/: CMakeLists.txt  Supra.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Supra/meshes/: bagaznik_mesh.mesh  leweDrzwi_mesh.mesh  object_10_mesh.mesh  object_11_mesh.mesh  object_12_mesh.mesh  object_13_mesh.mesh  object_14_mesh.mesh  object_15_mesh.mesh  object_18_mesh.mesh  object_19_mesh.mesh  object_1_mesh.mesh  object_20_mesh.mesh  object_21_mesh.mesh  object_22_mesh.mesh  object_23_001_mesh.mesh  object_23_002_mesh.mesh  object_23_003_mesh.mesh  object_23_004_mesh.mesh  object_23_005_mesh.mesh  object_23_006_mesh.mesh  object_23_007_mesh.mesh  object_23_008_mesh.mesh  object_23_009_mesh.mesh  object_23_010_mesh.mesh  object_23_011_mesh.mesh  object_23_012_mesh.mesh  object_23_013_mesh.mesh  object_23_014_mesh.mesh  object_23_015_mesh.mesh  object_23_016_mesh.mesh  object_23_017_mesh.mesh  object_23_018_mesh.mesh  object_23_019_mesh.mesh  object_23_020_mesh.mesh  object_23_021_mesh.mesh  object_23_022_mesh.mesh  object_23_023_mesh.mesh  object_23_024_mesh.mesh  object_23_025_mesh.mesh  object_23_026_mesh.mesh  (+699 more)
asset_imports/Quick3DAssets/Testroad/: CMakeLists.txt  Testroad.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Testroad/meshes/: plane_006_Material_007_0_mesh.mesh
asset_imports/Quick3DAssets/Testroad/source scene/: testroad.glb
asset_imports/Quick3DAssets/Zegary_05_2024_FBX/: Zegary_05_2024_FBX.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Zegary_05_2024_FBX/meshes/: circle009_mesh.mesh  cylinder002_mesh.mesh  line001_mesh.mesh  object001_mesh.mesh  text001_mesh.mesh  text002_mesh.mesh  text003_mesh.mesh  (+23 more)
asset_imports/Quick3DAssets/Zegary_05_2024_OBJ/: Zegary_05_2024_OBJ.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Zegary_05_2024_OBJ_2/: Zegary_05_2024_OBJ_2.qml  _importdata.json  qmldir
backend_mock/Backend/: BackendMock.qml
cmake/: clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  files.cmake  flags.cmake  pre-commit-check.cmake
content/: AirCondition.qml  AirConditionSitControl.qml  App.qml  CMakeLists.txt  Car3D.qml  ContactDelegate.qml  ContactModel.qml  EngineTemp.ui.qml  FuelLevel.ui.qml  Gauges.qml  GaugesTestForm.ui.qml  IconsLight.ui.qml  IconsMain.ui.qml  MainBackground.ui.qml  MainScreeen.ui.qml  MenuButton.qml  MusicPlayer.qml  Navigation.qml  PhoneButton.qml  PhoneList.qml  PhoneListToolBar.qml  PhoneListView.qml  RPMGauge.ui.qml  SpeedGauge.ui.qml
imports/: CMakeLists.txt
imports/CarDashboard/: CMakeLists.txt  Constants.qml  qmldir
imports/CarDashboard/designer/: plugin.metainfo
imports/Data/: CMakeLists.txt  Values.qml  simulation.js
src/: CarControlsInfo.cpp  CarControlsInfo.hpp  CarInfo.cpp  CarInfo.hpp  app_environment.h  import_qml_components_plugins.h  import_qml_plugins.h  main.cpp
src/airCondition/: Controller.cpp  Controller.hpp  Factory.cpp  Factory.hpp
src/airConditionSitControl/: AirConditioning.puml  Controller.cpp  Controller.hpp  Factory.cpp  Factory.hpp
utest/: CMakeLists.txt  SignalTester.hpp  example_test.cpp
utest/airCondition/: Controller_test.cpp  Factory_test.cpp
utestQml/: CMakeLists.txt  main.cpp  tst_example.qml
(+92 files in other folders)
